--- a/package.json
+++ b/package.json
@@ -4,22 +4,32 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook start"
   },
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
+    "@storybook/addon-actions": "4.1.16",
+    "@storybook/addon-links": "4.1.16",
+    "@storybook/addon-ondevice-backgrounds": "^4.1.16",
+    "@storybook/addon-ondevice-knobs": "^4.1.16",
+    "@storybook/addon-ondevice-notes": "^4.1.16",
+    "@storybook/addons": "4.1.16",
+    "@storybook/react-native": "4.1.16",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.12",
     "@types/react-native": "^0.57.42",
     "@types/react-test-renderer": "^16.8.1",
+    "babel-core": "^6.26.3",
     "babel-jest": "^24.7.1",
+    "babel-runtime": "^6.26.0",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.53.1",
+    "prop-types": "^15.7.2",
+    "react-dom": "16.8.3",
     "react-test-renderer": "16.8.3",
     "typescript": "^3.4.1"
   },
