--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-ondevice-backgrounds": "^4.1.16",
     "@storybook/addon-ondevice-knobs": "^4.1.16",
     "@storybook/addon-ondevice-notes": "^4.1.16",
+    "@storybook/addon-storyshots": "^4.1.16",
     "@storybook/addons": "4.1.16",
     "@storybook/react-native": "4.1.16",
     "@types/jest": "^24.0.11",
