--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "4.1.16",
+    "@storybook/addon-knobs": "4.1.16",
     "@storybook/addon-links": "4.1.16",
     "@storybook/addon-ondevice-backgrounds": "^4.1.16",
     "@storybook/addon-ondevice-knobs": "^4.1.16",
