--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/runtime": "^7.4.3",
-    "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addon-ondevice-backgrounds": "^4.1.16",
-    "@storybook/addon-ondevice-knobs": "^4.1.16",
-    "@storybook/addon-ondevice-notes": "^4.1.16",
-    "@storybook/addons": "^5.0.6",
+    "@storybook/addon-actions": "^5.1.0-alpha.22",
+    "@storybook/addon-knobs": "^5.1.0-alpha.22",
+    "@storybook/addon-links": "^5.1.0-alpha.22",
+    "@storybook/addon-ondevice-backgrounds": "^5.1.0-alpha.22",
+    "@storybook/addon-ondevice-knobs": "^5.1.0-alpha.22",
+    "@storybook/addon-ondevice-notes": "^5.1.0-alpha.22",
+    "@storybook/addons": "^5.1.0-alpha.22",
     "@storybook/react-native": "^5.1.0-alpha.22",
-    "@storybook/react-native-server": "^5.1.0-alpha.21",
+    "@storybook/react-native-server": "^5.1.0-alpha.22",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.12",
     "@types/react-native": "^0.57.42",
